--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,12 @@
         <module>shipment-service</module>
         <module>notification-service</module>
         <module>worker-service</module>
+        <module>infrastructure</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
-        <spring.boot.version>3.2.5</spring.boot.version>
+        <java.version>1.8</java.version>
+        <spring.boot.version>2.7.12</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -34,19 +35,13 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-            </plugin>
-        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
